FortiDevSec SAST and DAST scan

--- a/public/public/manifest.json
+++ b/public/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Broken Crystals",
-  "name": "Broken Crystals",
+  "short_name": "La Gabarra",
+  "name": "La Gabarra",
   "icons": [
     {
       "src": "favicons/favicon-16x16.png",
