--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DATABASE_USER=bc
 DATABASE_PASSWORD=bc
 DATABASE_PORT=5432
 DATABASE_DEBUG=true
-AWS_BUCKET=https://lagabarra-fortidemoscloud.s3.amazonaws.com
+AWS_BUCKET=https://prod-lagabarra.s3.eu-west-1.amazonaws.com/
 GOOGLE_MAPS_API=AIzaSyD2wIxpYCuNI0Zjt8kChs2hLTS5abVQfRQ
 JWT_PRIVATE_KEY_LOCATION=config/keys/jwtRS256.key
 JWT_PUBLIC_KEY_LOCATION=config/keys/jwtRS256.key.pub.pem
